--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@ a{
   font-size:18px;
 }
 </style>
-<body>
+<b<body>
 
 <audio autoplay loop>
-  <source src="Andmesh Kamaleng - Anugerah Terindah (Lirik)" type="audio/mpeg">
+  <source src="lagu.mp3" type="audio/mpeg">
 </audio>
 
 
-<body>
+
 <div class="container">
 <h2>Choose One 💕</h2>
 
